# SponzaPbr

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/SponzaPbr/: BoneTransform.hlsli  IBLComputePrePass_PS.hlsl  IBLCompute_PS.hlsl  IBLCompute_VS.hlsl  Prefilter_PS.hlsl  SSAOPass_PS.hlsl  ShadowPass_PS.hlsl  ShadowPass_VS.hlsl
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt
src/Apps/SponzaPbr/: BRDFGen.cpp  BRDFGen.h  BackgroundPass.cpp  BackgroundPass.h  CMakeLists.txt  ComputeLuminance.cpp  ComputeLuminance.h  Equirectangular2Cubemap.cpp  Equirectangular2Cubemap.h  GeometryPass.cpp  GeometryPass.h  IBLCompute.cpp  IBLCompute.h  ImGuiPass.cpp  ImGuiPass.h  ImGuiSettings.h  IrradianceConversion.cpp  IrradianceConversion.h  LightPass.cpp  LightPass.h  RayTracingAOPass.cpp  RayTracingAOPass.h  RenderPass.h  SSAOPass.cpp  SSAOPass.h  Scene.cpp  Scene.h  ShadowPass.cpp  ShadowPass.h  SkinningPass.cpp  SkinningPass.h  SponzaSettings.cpp  SponzaSettings.h  main.cpp
